--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "commander": "^2.9.0",
     "handlebars": "^4.0.5",
+    "handlebars-group-by": "^1.0.1",
     "js-yaml": "^3.4.6",
     "marked": "^0.3.5"
   }
