--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "clay",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "a model and convention based source code generator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "bin": {
     "clay": "index.js"
@@ -15,7 +15,11 @@
     "commander": "^2.9.0",
     "handlebars": "^4.0.5",
     "handlebars-group-by": "^1.0.1",
-    "js-yaml": "^3.4.6",
+    "jsoniq": "0.0.8",
     "marked": "^0.3.5"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
