working in progress on copy

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.9.0",
+    "fs-extra": "^7.0.1",
     "handlebars": "^4.0.5",
     "handlebars-group-by": "^1.0.1",
     "jsonpath": "^1.0.0",
