--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "rimraf": "^2.6.3"
+    "mocha": "^5.2.0"
   }
 }
