--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "handlebars": "^4.0.5",
     "handlebars-group-by": "^1.0.1",
     "jsonpath": "^1.0.0",
-    "marked": "^0.3.5"
+    "marked": "^0.3.5",
+    "resolve-global": "^0.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
