--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.19.0",
+    "debug": "^4.1.1",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.0.5",
     "handlebars-group-by": "^1.0.1",
