--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Morten Nielsen",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.4.2",
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.0.5",
