--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "handlebars": "^4.0.5",
     "handlebars-group-by": "^1.0.1",
     "jsonpath": "^1.0.0",
+    "lobars": "^1.2.0",
     "marked": "^0.3.5",
     "resolve-global": "^0.1.0"
   },
