making sure we dont mess up the model with clay parenting

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "handlebars-group-by": "^1.0.1",
     "jsonpath": "^1.0.0",
     "lobars": "^1.2.0",
+    "lodash": "^4.17.11",
     "lodash-inflection": "^1.5.0",
     "marked": "^0.3.5",
     "resolve-global": "^0.1.0"
