--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "commander": "^2.20.0",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.1.2",
-    "handlebars-group-by": "^1.0.1",
+    "handlebars-group-by": "https://github.com/jonasalfthan/handlebars-group-by",
     "jsonpath": "^1.0.1",
     "lobars": "^1.2.0",
     "lodash": "^4.17.11",
