--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.11",
     "lodash-inflection": "^1.5.0",
     "marked": "^0.6.2",
+    "minimatch": "^3.0.4",
     "resolve-global": "^1.0.0"
   },
   "devDependencies": {
