--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
+    "mock-require": "^3.0.3",
     "sinon": "^7.3.2"
   }
 }
