--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clay-generator",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "a model and convention based source code generator",
   "main": "index.js",
   "scripts": {
@@ -9,27 +9,31 @@
   "bin": {
     "clay": "index.js"
   },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/morkeleb/clay.git"
+  },
   "author": "Morten Nielsen",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.2",
-    "chokidar": "^3.0.0",
-    "commander": "^2.20.0",
-    "fs-extra": "^7.0.1",
-    "handlebars": "^4.1.2",
+    "chalk": "^4.1.0",
+    "chokidar": "^3.4.3",
+    "commander": "^6.2.0",
+    "fs-extra": "^9.0.1",
+    "handlebars": "^4.7.6",
     "handlebars-group-by": "https://github.com/jonasalfthan/handlebars-group-by",
     "jsonpath": "^1.0.2",
     "lobars": "^1.2.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.20",
     "lodash-inflection": "^1.5.0",
-    "marked": "^0.6.2",
+    "marked": "^1.2.3",
     "minimatch": "^3.0.4",
     "resolve-global": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.1.4",
+    "mocha": "^8.2.1",
     "mock-require": "^3.0.3",
-    "sinon": "^7.3.2"
+    "sinon": "^9.2.1"
   }
 }
