--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "clay-generator",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "a model and convention based source code generator",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test:watch": "mocha --watch"
   },
   "bin": {
     "clay": "index.js"
@@ -19,6 +20,7 @@
     "chalk": "^4.1.0",
     "chokidar": "^3.4.3",
     "commander": "^6.2.0",
+    "decache": "^4.6.0",
     "fs-extra": "^9.0.1",
     "handlebars": "^4.7.6",
     "handlebars-group-by": "https://github.com/jonasalfthan/handlebars-group-by",
@@ -28,6 +30,7 @@
     "lodash-inflection": "^1.5.0",
     "marked": "^1.2.3",
     "minimatch": "^3.0.4",
+    "nyc": "^15.1.0",
     "resolve-global": "^1.0.0"
   },
   "devDependencies": {
