--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^4.1.0",
     "chokidar": "^3.4.3",
     "commander": "^6.2.0",
+    "crypto": "^1.0.1",
     "decache": "^4.6.0",
     "fs-extra": "^9.0.1",
     "handlebars": "^4.7.6",
