--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "marked": "^2.0.1",
     "minimatch": "^3.0.4",
     "nyc": "^15.1.0",
-    "resolve-global": "^1.0.0"
+    "resolve-global": "^1.0.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "decache": "^4.6.0",
     "mocha": "^8.3.2",
     "mock-require": "^3.0.3",
-    "sinon": "^10.0.0",
-    "decache": "^4.6.0"
+    "sinon": "^10.0.0"
   }
 }
