feat: Add generator management CLI with GitHub registry integration
- Add 'clay generator list' command to list installed generators
- Add 'clay generator add <ref>' command to add generators from GitHub, registry, or local paths
- Add 'clay generator delete [name]' command to remove generators from models
- Add 'clay generator list-available' command to browse registry
- Add 'clay generator clear-cache' command to refresh registry from GitHub

Features:
- GitHub-first registry loading with multi-level fallback (GitHub -> cache -> local)
- Local registry cache in ~/.clay/registry-cache.json for offline use
- Interactive prompts with inquirer for multi-model selection
- Automatic generator cleanup when no longer used
- Enhanced path resolution for local generator directories
- Registry of curated community generators

Dependencies:
- Added inquirer@8 for interactive CLI prompts

Tests:
- Added comprehensive test suite for generator management (66 tests passing)
- All existing tests continue to pass

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs-extra": "^9.1.0",
     "handlebars": "^4.7.7",
     "handlebars-group-by": "https://github.com/jonasalfthan/handlebars-group-by",
+    "inquirer": "^8.2.6",
     "jsonpath": "^1.1.1",
     "lobars": "^1.2.0",
     "lodash": "^4.17.21",
