Configure build and development scripts
- Install ts-node and tsconfig-paths for dev mode
- Add build, build:watch, dev, and prepare scripts
- Create bin/clay-dev wrapper script for auto-detection
- Wrapper uses ts-node in dev, compiled JS in production
- Update main field to dist/index.js
- Add .npmignore to exclude TS source from package
- Configure files field for clean npm packages

With npm link, changes are now instantly available! 🚀

Task 2 complete ✅

--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "clay-generator",
   "version": "0.2.9",
   "description": "a model and convention based source code generator",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "dev": "ts-node index.ts",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run build && npm test",
     "test": "mocha",
     "test:watch": "mocha --watch"
   },
   "bin": {
-    "clay": "index.js"
+    "clay": "bin/clay-dev"
   },
+  "files": [
+    "dist/",
+    "bin/",
+    "README.md",
+    "LICENSE"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/morkeleb/clay.git"
@@ -48,6 +59,8 @@
     "mocha": "^8.3.2",
     "mock-require": "^3.0.3",
     "sinon": "^10.0.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
   }
 }
