--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/handlebars": "^4.0.40",
     "@types/inquirer": "^9.0.9",
+    "@types/jsonpath": "^0.2.4",
     "@types/lodash": "^4.17.20",
     "@types/marked": "^5.0.2",
     "@types/minimatch": "^5.1.2",
