--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,18 +1,12 @@
 {
   "diff": true,
-  "extension": [
-    "js"
-  ],
+  "extension": ["js", "ts"],
+  "require": ["ts-node/register"],
   "package": "./package.json",
   "reporter": "min",
   "slow": 75,
   "timeout": 2000,
   "ui": "bdd",
-  "watch-files": [
-    "src/**/*.js",
-    "test/**/*.js"
-  ],
-  "ignore": [
-    "test/samples/**/*"
-  ]
+  "watch-files": ["src/**/*.js", "src/**/*.ts", "test/**/*.js", "test/**/*.ts"],
+  "ignore": ["test/samples/**/*"]
 }
