--- a/.mocharc.json
+++ b/.mocharc.json
@@ -3,10 +3,11 @@
   "extension": ["js", "ts"],
   "require": ["ts-node/register"],
   "package": "./package.json",
-  "reporter": "min",
+  "reporter": "spec",
   "slow": 75,
   "timeout": 2000,
   "ui": "bdd",
   "watch-files": ["src/**/*.js", "src/**/*.ts", "test/**/*.js", "test/**/*.ts"],
-  "ignore": ["test/samples/**/*"]
+  "ignore": ["test/samples/**/*"],
+  "spec": ["test/**/*.test.ts"]
 }
