Add --exit flag to mocha to prevent hanging after tests
The test process was hanging after all tests completed because importing
command-line.ts loads chokidar (for file watching), which keeps the event
loop alive. Adding the 'exit: true' flag forces mocha to exit after tests
complete, preventing the hang.

Tests now exit cleanly: 45 passing (2s)

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -9,5 +9,6 @@
   "ui": "bdd",
   "watch-files": ["src/**/*.js", "src/**/*.ts", "test/**/*.js", "test/**/*.ts"],
   "ignore": ["test/samples/**/*"],
-  "spec": ["test/**/*.test.ts"]
+  "spec": ["test/**/*.test.ts"],
+  "exit": true
 }
