--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-    
+
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -18,29 +18,21 @@
     "strictPropertyInitialization": true,
     "noImplicitThis": true,
     "alwaysStrict": true,
-    
+
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    
+
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    
+
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "src/**/*",
-    "index.ts",
-    "test/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "coverage",
-    "test/samples"
-  ]
+  "files": ["external-modules.d.ts"],
+  "include": ["src/**/*", "index.ts", "test/**/*"],
+  "exclude": ["node_modules", "dist", "coverage", "test/samples"]
 }
