feat: Add Model Context Protocol (MCP) server for AI assistant integration
- Implement 7 MCP tools for Clay operations:
  * clay_generate: Generate code from models (supports zero-parameter regeneration)
  * clay_clean: Clean up generated files
  * clay_test_path: Test JSONPath expressions
  * clay_init: Initialize Clay projects or generators
  * clay_list_generators: List all generators in project
  * clay_get_model_structure: Inspect model structure and metadata
  * clay_list_helpers: List all 47+ Handlebars helpers with examples

- Add clay-mcp global executable:
  * Smart dev/prod detection (tsx in dev, compiled JS in production)
  * Works with npm link for local development
  * Simple setup without absolute paths

- Comprehensive testing:
  * 5 tests for MCP server startup, initialization, and tool discovery
  * All 50 tests passing

- Documentation:
  * Complete setup guides for Claude Desktop and VS Code
  * Tool reference with examples
  * Integration benefits and troubleshooting

- Build automation:
  * MCP server builds automatically with main package
  * Proper npm packaging and binary exports

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a model and convention based source code generator",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cd mcp && npm install && npm run build && cd ..",
     "build:watch": "tsc --watch",
     "dev": "ts-node index.ts",
     "prepare": "npm run build",
@@ -17,11 +17,14 @@
     "format:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts' 'index.ts'"
   },
   "bin": {
-    "clay": "bin/clay-dev"
+    "clay": "bin/clay-dev",
+    "clay-mcp": "bin/clay-mcp"
   },
   "files": [
     "dist/",
     "bin/",
+    "mcp/dist/",
+    "mcp/package.json",
     "README.md",
     "LICENSE"
   ],
